(mobile) DropDownMenu: fix for wrong padding and wrong top margin
[Issue] https://github.com/Samsung/TAU/issues/1159
[Problem] More options list & Dropdown list -> shape
[Solution]
 - add missing padding to widget wrapper

--- a/src/css/profile/mobile/themes/dark.variables.less
+++ b/src/css/profile/mobile/themes/dark.variables.less
@@ -55,7 +55,7 @@
     @button-background-contained:  @color-white;
     @text-input-invalid-color: #ff6666;
 
-    @dropdown-menu-options-border: 3 * @px_base solid #525252;
+    @dropdown-menu-options-border: 0.75 * @px_base solid #525252;
     @dropdown-menu-options-background: #3d3d3d;
     @dropdown-menu-options-color: @color-white;
 
