--- a/src/css/profile/mobile/themes/light.variables.less
+++ b/src/css/profile/mobile/themes/light.variables.less
@@ -53,7 +53,7 @@
 
     @button-background-contained: @_black;
     @text-input-invalid-color: #b00020;
-    @dropdown-menu-options-border: 1 * @px_base solid #cccccc;
+    @dropdown-menu-options-border: 0.25 * @px_base solid #cccccc;
     @dropdown-menu-options-background: @popup-background-color;
     @dropdown-menu-options-color: @_black;
 
